<resources>
    <!-- HomePage -->
    <string name="app_name">TaskApp</string>
    <string name="welcome_message">Welcome to TaskApp</string>
    <string name="hello_name">Hello, </string>
    <string name="tap_module">Tap any module for details</string>
    <string name="created_by">Created by Lukas Chymcak and Zuzana Raczova</string>

    <!-- Settings -->
    <string name="settings_title">SETTINGS</string>
    <string name="settings_change_language">LANGUAGE</string>
    <string name="name_edit_title">NAME</string>
    <string name="change_name_inbox">edit name</string>
    <string name="change_name_button">save</string>


    <!-- Packing module -->
    <string name="packing_title">PACKING</string>
    <string name="no_trips_message">you have no trips, click to add a trip :)</string>
    <string name="next_trip">next trip: </string>
    <string name="packed_percentage">packed: </string>
    <string name="suitcase_description">Suitcase</string>
    <string name="add_item">Add item</string>

    <!-- Watering module -->
    <string name="watering_title">WATERING</string>
    <string name="no_plants_message">you have no plants, click to add a plant :)</string>
    <string name="next_watering">next watering: </string>
    <string name="water_today">watering today: </string>


    <!-- Shopping module -->
    <string name="shopping_title">SHOPPING LIST</string>
    <string name="no_items_message">your cart is empty, click to add an item :)</string>
    <string name="in_shopping_list">shopping list: </string>
    <string name="items_to_buy">items left to buy: </string>

    <!-- Recipe module -->
    <string name="recipe_title">RECIPES</string>
    <string name="no_recipes_message">you have no recipes yet, click to add a recipe :)</string>
    <string name="recipes_saved">you have 6 recipes saved </string>
    <string name="last_recipe">last recipe added: </string>

    <!-- Packing screen -->
    <string name="packing_screen_title">PACKING</string>
    <string name="my_trips_title">MY TRIPS:</string>
    <string name="no_trips_message_screen">No trips yet, add a trip :)</string>
    <string name="packing_percentage">Packing: </string>
    <string name="remove_trip">Remove</string>
    <string name="delete_trip_title">Delete Trip</string>
    <string name="delete_trip_message">Are you sure you want to delete the trip</string>
    <string name="delete_button">Delete</string>
    <string name="cancel_button">Cancel</string>
    <string name="click_to_add_bag">Click to add a trip</string>

    <string name="add_trip_button">Add trip</string>
    <string name="add_trip_name_label">Name</string>
    <string name="select_date_from">Select Date From</string>
    <string name="select_date_to">Select Date To</string>
    <string name="add_trip_action">Add Trip</string>

    <!-- Trip screen -->
    <string name="trip_screen_title">TRIP DETAILS</string>
    <string name="back_button_description">Arrow back</string>
    <string name="trip_name">Trip Name</string>
    <string name="bags_section_title">BAGS</string>
    <string name="no_bags_message">No bags yet, add a bag :)</string>
    <string name="bag_name_label">Bag name</string>
    <string name="add_bag_button">Add Bag</string>
    <string name="delete_bag_dialog_title">Delete Bag</string>
    <string name="delete_bag_dialog_message">Are you sure you want to delete this bag? </string>
    <string name="delete_button_bag">Delete</string>
    <string name="cancel_button_bag">Cancel</string>

    <!-- Plant add screen -->
    <string name="back_to_watering">Back to watering</string>
    <string name="add_plant">ADD PLANT</string>
    <string name="select_from_preset_or_add_custom">Select from preset plants or add a custom one!</string>
    <string name="custom">Custom</string>
    <string name="plant_image">Plant image</string>

    <!-- Watering screen -->
    <string name="back_to_home">Back home</string>
    <string name="watering">WATERING</string>
    <string name="added_plants">MY PLANTS: </string>
    <string name="no_plants_added">No plants added.</string>
    <string name="add_plant_title">Add plant</string>


    <!-- Plant configuration screen -->
    <string name="first_day">First day</string>
    <string name="watering_frequency">Frequency</string>
    <string name="plant_room">Room</string>
    <string name="save_button">Save</string>
    <string name="delete_plant_button">DELETE PLANT</string>
    <string name="delete_plant_dialog_title">Delete Plant</string>
    <string name="delete_plant_dialog_message">Are you sure you want to delete this plant? </string>
    <string name="waterml">Water (ml)</string>
    <string name="days">(days)</string>
    <string name="edit"> edit</string>
    <string name="needs_watering">Needs watering!</string>
    <string name="water_every">(water every </string>
    <string name="water_every_days"> days)</string>





    <!-- Rooms -->
    <string name="room">ROOM</string>
    <string name="living_room">LIVING ROOM</string>
    <string name="bedroom">BEDROOM</string>
    <string name="bathroom">BATHROOM</string>
    <string name="dining_room">DINING ROOM</string>
    <string name="kitchen">KITCHEN</string>
    <string name="outdoors">OUTDOORS</string>
    <string name="kids_room">KIDS ROOM</string>
    <string name="allroom">ALL</string>



    <!-- Welcome screen -->
    <string name="welcome_screen_title">Welcome!</string>
    <string name="enter">Enter</string>
    <string name="logo_description">Logo</string>

    <!-- Plant model -->
    <string name="custom_plant">Custom</string>
    <string name="monstera">Monstera</string>
    <string name="orchid">Orchid</string>
    <string name="zz_plant">ZZ Plant</string>
    <string name="snake_plant">Snake Plant</string>
    <string name="spider_plant">Spider Plant</string>
    <string name="aloe_vera">Aloe Vera</string>
    <string name="african_violet">African Violet</string>

    <string name="custom_description">Custom plant description</string>
    <string name="monstera_description">Monstera (Monstera deliciosa) is a popular tropical houseplant known for its large, glossy, heart-shaped leaves with unique holes and splits. It thrives in bright, indirect light and is low-maintenance.</string>
    <string name="orchid_description">Orchids (Phalaenopsis) are elegant tropical plants known for their stunning, long-lasting flowers. They thrive in bright, indirect light and require careful watering and humidity.</string>
    <string name="zz_plant_description">The ZZ plant (Zamioculcas zamiifolia) is a hardy, low-maintenance indoor plant known for its glossy, dark green leaves.</string>
    <string name="snake_plant_description">The Snake Plant is a resilient and low-maintenance plant with tall, sword-like leaves featuring green and yellow variegation.</string>
    <string name="spider_plant_description">The Spider Plant is a hardy and adaptable houseplant with long, arching, variegated leaves.</string>
    <string name="aloe_vera_description">Aloe Vera is a versatile succulent with thick, fleshy leaves filled with gel known for its medicinal and skincare benefits.</string>
    <string name="african_violet_description">The African Violet is a compact houseplant with fuzzy leaves and vibrant flowers in purple, pink, or white.</string>


    <!-- Onboarding packing -->
    <string name="first_onboarding_title">WELCOME TO THE PACKING MODULE!</string>
    <string name="first_onboarding_description">Let me show you how it works :)</string>
    <string name="second_onboarding_title">GOING ON A TRIP?</string>
    <string name="second_onboarding_description">Here you can create a trip, set the destination and the dates and start packing!</string>
    <string name="third_onboarding_title">DO NOT FORGET ANYTHING!</string>
    <string name="third_onboarding_description">Just add a bag with items, keep track of what you have packed and you are ready to go!</string>
    <string name="fourth_onboarding_title">ENJOY!</string>
    <string name="fourth_onboarding_description">Remember, everything is still work in progress, so please let us know if you have any feedback. Thanks a lot!</string>

    <!-- Watering Module Onboarding Strings -->
    <string name="watering_first_title">WELCOME TO THE WATERING MODULE!</string>
    <string name="watering_first_description">Let me show you how it works :)</string>
    <string name="watering_second_title">NEED HELP CARING FOR YOUR PLANTS?</string>
    <string name="watering_second_description">Here you can create a plant, set the watering frequency and see when it is time to water them!</string>
    <string name="watering_third_title">NEVER FORGET TO WATER YOUR PLANTS!</string>
    <string name="watering_third_description">Take the best care of your plants and never forget to water them again!</string>
    <string name="watering_fourth_title">ENJOY!</string>
    <string name="watering_fourth_description">Remember, everything is still work in progress, so please let us know if you have any feedback. Thanks a lot!</string>
    <string name="one_plant_added">One added plant</string>
    <string name="all_plants_watered">All of your plants are watered!</string>
    <string name="one_plant_needs_watering">One plant needs watering!</string>
    <string name="multiple_plants_need_watering"> plants need watering!</string>
    <string name="plant_image_description">Plant</string>
    <string name="added_plant_count">Added plants: </string>

    <!-- Shopping Module Onboarding Strings -->
    <string name="wip">WORK IN PROGRESS</string>


</resources>