...
                Alignment.CenterHorizontally
    ) {

        Row {
            Icon(
                imageVector = Icons.Default.Settings,
                contentDescription = "Settings",
                modifier = Modifier.padding(16.dp).offset(x = (-70).dp),
            )

            Text(
                text = "hello, lukas",
                fontSize = 25.sp,
...
